Ajustes na foto, nav e rodapé

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
     <nav>
-        <h1 id="logo">Douglas da Silva</h1>
-        
+        <div id="logo-container">
+            <h1 class="logo douglas">Douglas</h1>
+            <h1 class="logo da-silva">da Silva</h1>
+        </div>
         <ul class="menu">
             <li>Sobre mim</li>
             <li>Projetos</li>
@@ -23,7 +25,7 @@
     </nav>
     <main>
         <section class="sobre">
-            <div class="about-container">
+            <div class="sobre-container">
                 <h2>Sobre mim</h2>
                 <p>Hi! I'm Ada, Countess of Lovelace and am an English mathematician and writer, chiefly known for my work on Charles Babbage's proposed mechanical general-purpose computer, the Analytical Engine.
                 <br><br>
@@ -50,7 +52,7 @@
             <i class="devicon-css3-plain-wordmark"></i>
             <i class="devicon-javascript-plain"></i>
             <i class="devicon-react-original-wordmark"></i>
-            <i class="devicon-git-plain"></i>
+            <i class="devicon-git-plain-wordmark"></i>
             <i class="devicon-github-original colored"></i>
             <i class="devicon-figma-plain"></i>
         </section>
