--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <section class="sobre">
             <div class="sobre-container">
                 <h2>Sobre mim</h2>
-                <p>Hi! I'm Ada, Countess of Lovelace and am an English mathematician and writer, chiefly known for my work on Charles Babbage's proposed mechanical general-purpose computer, the Analytical Engine.
+                <p>Olá, eu sou o Douglas da Silva, sou Brasileiro natural de Jau-SP, faço engenharia de sofware pelo <a href="codecademy.com">Codecademy</a>.
                 <br><br>
-                <p>I am one of the first to recognize that machines have applications beyond pure calculation, and to have published the first algorithm intended to be carried out by such a machine. </p>
+                <p>Tenho experiencia profissional na area da contabilidade, especialmente com Departamento Pessoal e estou ampliando meus horizontes com a programação web. </p>
                 <br><br>  
-                <p>In my free time I like to read about scientific developments, mathematics, and computational mathematics. I also like to take my chances of winning big. </p>
+                <p>Durante meu tempo livre, gosto de ler sobre tecnologia e atualidades, jogar jogos eletronicos e navegar por reddits interessantes. </p>
                 <br><br>    
-                <p>Fun fact! I've been programing for 6,517,444,231 seconds!</p>
+                <p>Fato curioso! Já fazem XXXXXXX segundos que estou programando!</p>
                 <br><br>
             </div>
             <img src="resources/profile.jpg" alt="Douglas da Silva">
@@ -44,6 +44,7 @@
                 <h2>Projetos</h2>
                 
                 <h2>→ TeaCozy</h2>
+                <h2>→ Dasmoto's Arts & Crafts</h2>
             </div>
         </section>
         <section class="skills">
