--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
     </main>
     <footer>
-        <p>Feito com <span id="coracao">♥</span> por Douglas da Silva</p>
+        <p>Feito com <img id="coracao" src="resources/heart.png" alt="coração azul"> por Douglas da Silva</p>
     </footer>
 </body>
 </html>
