--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div id="logo-container">
-            <h1 class="logo douglas">Douglas</h1>
+            <h1 class="logo douglas"><span style="color:cyan">D</span>ouglas</h1>
             <h1 class="logo da-silva">da Silva</h1>
         </div>
         <ul class="menu">
@@ -27,7 +27,7 @@
         <section class="sobre">
             <div class="sobre-container">
                 <h2>Sobre mim</h2>
-                <p>Olá, eu sou o Douglas da Silva, sou Brasileiro natural de Jau-SP, faço engenharia de sofware pelo <a href="codecademy.com">Codecademy</a>.
+                <p>Olá, eu sou o Douglas da Silva, sou Brasileiro natural de Jau-SP, faço engenharia de sofware pelo <a href="https://www.codecademy.com/">Codecademy</a>.
                 <br><br>
                 <p>Tenho experiencia profissional na area da contabilidade, especialmente com Departamento Pessoal e estou ampliando meus horizontes com a programação web. </p>
                 <br><br>  
